#116 upgrade to Java 21